# FP-competition-2020

./: index.html  prizes  slidy.js
Adam-Calvert/src/: Main.hs  README.md  cabal.project  makeVideo.sh  mandelbulb.cabal
Aden-Haussmann/src/: Fractals.hs  LineGraphics.hs  readme.rtf
Alexander-Sorokin (GLOSS)/src/: CirclesFractal.hs
Alexander-Sorokin/src/: README.txt
Amy-Yin/src/: Creepyfrac.hs  readme.txt
Bence-Szilagyi (GLOSS)/src/: Fractals.hs  Materials.hs  fp-competition.cabal
Bence-Szilagyi/src/: Color.hs  Main.hs  Mandelbrot.hs  MandelbrotColors.hs  Ray.hs  SphereHitCheck.hs  Stereographic.hs  Tracer.hs  VConversions.hs  VOperations.hs  readme.txt  sources.txt
Henry-Zhang,Cong-Xiong/src/: Coordinate.hs  Main.hs  README.md  Tiger.cabal
Iain-High/src/: ConGoL.hs  ConGoLDisp.hs  How to Run.txt
Jacob-Walters/src/: Makefile  marboreal.hs
Ksenia-Knyspel/: output.html
Ksenia-Knyspel/src/: LSystem.hs  instructions.odt  kseniaKnyspel.hs  output.html
Laura-O'Sullivan/: circle.html  snowflakestars.html  spikystar.html  squares.html
Laura-O'Sullivan/src/: LSystem.hs  Main.hs  README.txt
Oscar-Shrimpton/: .ghci  .gitignore
Oscar-Shrimpton/src/: Greeble.hs  LICENSE  Main.hs  Makefile  README.md  Util.hs
Purvi-Harwani/: index.html
Purvi-Harwani/src/: REDME.txt  algo.hs
Shuyuan-Zhang,Xuhan-Zhang/src/: LSystem.hs  readme.txt  uIME.hs
