cabal-version:       >=1.10
name:                mandelbulb
version:             0.1.0.0
build-type:          Simple

executable mandelbulb
  main-is:             Main.hs
  build-depends:       base >=4.14 && <4.15, directory, gloss-export, gloss-raster, vect
  default-language:    Haskell2010
  ghc-options:
    -threaded
    -O2